--- a/cortege_on_esp/platformio.ini
+++ b/cortege_on_esp/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 lib_deps = 
 	C:\Users\gusta\Documents\Arduino\libraries\SabertoothSimplified
 	regenbogencode/ESPNowW@^1.0.2
+	madhephaestus/ESP32Servo @ 3.0.6
+
+
